# QueryHub

./: README.md
backend/: gunicorn.config.py  pyproject.toml
backend/Insacog-QueryHub/Insacog_QueryHub/: .gitignore  gunicorn.config.py  manage.py  requirements.txt
backend/Insacog-QueryHub/Insacog_QueryHub/Insacog_QueryHub/: asgi.py  wsgi.py
backend/Insacog-QueryHub/Insacog_QueryHub/queryhub/: models.py
backend/Insacog-QueryHub/Insacog_QueryHub/virtual_env/: pyvenv.cfg
backend/Insacog_QueryHub/: settings.py  urls.py
backend/queryhub/: admin.py  apps.py  models.py
backend/queryhub/api/: frontend_stats.py  get_data.py  lineage_auto_complete.py  lineage_classification.py  lineages.py  monthly_lineage_distribution.py  monthly_sequences.py  monthly_who_label.py  mutation_auto_complete.py  state_wise_classification.py  state_wise_sequences.py  states_auto_complete.py  tasks.py  upload.py  urls.py  utils.py  weekly_lineage_distribution.py  weekly_sequences.py  weekly_who_label.py
backend/queryhub/api/autocomplete/: combined.py  deletion.py  lineage.py  mutation.py  next_clade.py  nextclade.py  nextcladepango.py  states.py
backend/queryhub/api/graph/: state_count.py  substitution_count.py  week_month_count.py
backend/queryhub/api/weekly_report/: last_fourmonths_sequences.py  last_fourmonths_variants.py  region_wise_2022_analysis.py  region_wise_analysis.py  state_wise_last_threemonths.py  submitting_labs_sequences.py  variant_status.py  variant_status_by_states.py  week_wise_last_threemonths.py
backend/settings/: asgi.py  settings.py  urls.py
(+39 files in other folders)
